--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jsdom": "^19.0.0",
     "parcel": "^2.3.2",
     "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "minimist": "1.2.6"
   },
   "dependencies": {
     "date-fns": "^2.28.0",
